# mcl

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md  build.rs  cliff.toml  dist-workspace.toml  repomix-output.xml
.claude/: .fuse_hidden00000a0e00000051
.github/: dist-build-setup.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  crash_report.yml  feature_request.yml
.github/workflows/: build.yml  publish-aur.yml  publish-chocolatey.yml  publish-crates.yml  publish-winget.yml  release.yml  tag-release.yml
assets/: config.toml  default.toml  theme.toml
java/: MclShim.java
pkg/chocolatey/: mcl-launcher.nuspec
pkg/chocolatey/tools/: VERIFICATION.txt  chocolateyInstall.ps1
pkg/mcl-launcher/: PKGBUILD
pkg/mcl-launcher-bin/: PKGBUILD  README-0.1.0
pkg/mcl-launcher-git/: PKGBUILD
src/: auth.rs  cli.rs  instance_logs.rs  logger.rs  macros.rs  main.rs  running.rs
src/auth/: accounts.rs  mod.rs  oauth.rs
src/cli/: account.rs  content.rs  import.rs  instance.rs  log.rs  mod.rs  output.rs  utils.rs  version.rs
src/config/: mod.rs  obj.rs  settings.rs  theme.rs  types.rs
src/instance/: desktop.rs  import.rs  launch.rs  loader.rs  log_files.rs  manager.rs  mod.rs  models.rs  mods.rs  resource_packs.rs  screenshots.rs  shaders.rs  worlds.rs
src/instance/content/: mod.rs  mods.rs  resource_packs.rs  shaders.rs  worlds.rs
src/instance/import/: mmc.rs  mod.rs  mrpack.rs
src/instance/launch/: mod.rs  patches.rs
src/instance/loader/: fabric.rs  forge.rs  mod.rs  neoforge.rs  quilt.rs  vanilla.rs
src/net/: fabric.rs  forge.rs  mod.rs  modrinth.rs  mojang.rs  neoforge.rs  quilt.rs
src/tui/: app.rs  error_buffer.rs  event.rs  input.rs  interface.rs  layout.rs  log_buffer.rs  logging.rs  mod.rs  progress.rs  render.rs  theme.rs  widgets.rs
src/tui/widgets/: account.rs  content.rs  content_list.rs  details.rs  instances.rs  logs_viewer.rs  mod.rs  mods_list.rs  profiles.rs  screenshots_grid.rs  search.rs  status.rs
src/tui/widgets/content/: list.rs  mod.rs  tabs.rs
src/tui/widgets/popups/: base.rs  confirm.rs  error.rs  import_modpack.rs  mod.rs  new_instance.rs
src/tui/widgets/popups/import_modpack/: mod.rs  render.rs  state.rs
src/tui/widgets/popups/new_instance/: mod.rs  render.rs  state.rs
wix/: main.wxs
