[package]
name = "mcl"
version = "0.1.0"
authors = ["72-S"]
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = "4.5.27"
color-eyre = "0.6.3"
config = "0.15.6"
crossterm = "0.28.1"
dirs-next = "2.0.0"
once_cell = "1.20.3"
ratatui = "0.29.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "2"
