[package]
name = "mcl"
version = "0.1.0"
authors = ["objz"]
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = "4.5.27"
color-eyre = "0.6.3"
config = "0.15.6"
crossterm = { version = "0.29", features = [] }
dirs-next = "2.0.0"
log = "0.4"
once_cell = "1.20.3"
ratatui = "0.30.0"
ratatui-textarea = { version = "0.8", features = ["crossterm"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
tachyonfx = "0.25"
throbber-widgets-tui = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-popup = "0.7"
tui-prompts = "0.6"
tui-logger = { version = "0.18", features = ["tracing-support"] }
tui-scrollview = "0.6"
tui-widget-list = "0.15"
zip = "2"


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
