[package]
name = "mcl-launcher"
version = "0.2.1"
authors = ["objz"]
edition = "2024"
description = "A fully featured Minecraft launcher TUI"
repository = "https://github.com/objz/mcl"
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["minecraft", "launcher", "tui", "ratatui"]
categories = ["command-line-utilities", "games"]

[[bin]]
name = "mcl"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = "4.5.27"
color-eyre = "0.6.3"
config = "0.15.6"
crossterm = "0.29.0"
dirs-next = "2.0.0"
log = "0.4"
ratatui = { version = "0.30.0", features = ["serde"] }
ratatui-themekit = { version = "0.6", features = ["serde"] }
ratatui-textarea = { version = "0.9.1", features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
tachyonfx = "0.25"
throbber-widgets-tui = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-popup = "0.7"
tui-prompts = "0.6"
tui-logger = { version = "0.18", features = ["tracing-support"] }
tui-scrollview = "0.6"
tui-widget-list = "0.15"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png"] }
zip = "8.5.1"
minecraft-msa-auth = "0.4.0"
oauth2 = "5.0.0"
open = "5"
which = "8.0.2"
dirs = "6.0.0"
notify = "8"


[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3"
